== 1.1.0

  * Changes in API to reflect yaml library. 'parse' is now 'load' and 'load'
    is 'loadpath'.
  * Fixed bindings by using latest dub binder (possible bug with Lua 5.2).

== 1.0.0 2014-01-26

  * Initial release.
  * When 'xml' tag name is missing, use 'table' as tag name.
  * Added option to trim whitespace.