@@ -1,8 +1,7 @@
+{% -- DEFAULT TEMPLATE FOR MODULE WITH C++. Original in lub project. %}
 {% 
 local lfs = require 'lfs'
 local lub = require 'lub'
-local platspec = {}
-local platlibs = {}
 %}
 package = "{{lib.type}}"
 version = "{{lib.VERSION}}-1"
@@ -11,22 +10,13 @@ source = {
   dir = '{{lib.type}}-REL-{{lib.VERSION}}',
 }
 description = {
-  summary = "Very fast xml parser based on RapidXML",
+  summary = "{{def.description.summary}}",
   detailed = [[
-    This module is part of the Lubyk project.
-
-    Main features are:
-     - Fast and easy to use
-     - Complete documentation
-     - Based on proven code (RapidXML)
-     - Full test coverage
-
-     Read the documentation at http://doc.lubyk.org/xml.html.
-  ]],
-  homepage = "http://doc.lubyk.org/{{lib.type}}.html",
-  license = "MIT"
+{{def.description.detailed}}]],
+  homepage = "{{def.description.homepage}}",
+  license = "{{def.description.license}}"
 }
-{% -- DEFAULT TEMPLATE FOR MODULE WITH C++. Original in lub project. %}
+
 dependencies = {
 {% for _, v in ipairs(lib.DEPENDS) do %}
   "{{v}}",
@@ -45,20 +35,23 @@ build = {
     -- C++ modules
     {{string.format("[%-17s] = ", "'"..lib.type..".core'")}}{
       sources = {
-{% for path in lub.Dir('src'):glob '%.cpp' do %}
+{% for path in lub.Dir('src'):glob('%.cpp',0) do %}
+        '{{path}}',
+{% end %}
+{% for path in lub.Dir('src/bind'):glob '%.cpp' do %}
         '{{path}}',
 {% end %}
       },
-      incdirs = {'include', 'src/bind', 'src/vendor'},
-      libraries = {'stdc++'},
+      incdirs   = {'{{ lub.join(def.includes, "', '") }}'},
+      libraries = {'{{ lub.join(def.libraries, "', '") }}'},
     },
   },
-{% if #platspec > 0 then %}
+{% if #def.platspec > 0 then %}
   platforms = {
-{% for _, plat in ipairs(platspec) do %}
+{% for _, plat in ipairs(def.platspec) do %}
     {{plat}} = {
       modules = {
-        ['lub.core'] = {
+        ['{{lib.type}}.core'] = {
 {% if lub.exist('src/'..plat) then %}
           sources = {
 {% for path in lub.Dir('src/'..plat):glob '%.cpp' do %}
@@ -66,8 +59,8 @@ build = {
 {% end %}
           },
 {% end %}
-{% if platlibs[plat] then %}
-          librairies = { {{platlibs[plat]}} },
+{% if def.platlibs[plat] then %}
+          libraries = {'{{ lub.join(def.platlibs[plat], "', '") }}'},
 {% end %}
         },
       },
@@ -76,3 +69,5 @@ build = {
   },
 {% end %}
 }
+
+
